--- a/app/src/main/res/layout/activity_create_memo.xml
+++ b/app/src/main/res/layout/activity_create_memo.xml
@@ -5,141 +5,135 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#dfdfdf"
-    tools:context="com.example.eunyoungha.r_multi_note.CreateMemoActivity">
+    tools:context="com.example.eunyoungha.r_multi_note.activities.CreateMemoActivity">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar"
         />
 
-        <RelativeLayout
-            android:id="@+id/memo_multi_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:visibility="gone"
-            >
-
-            <!--photo-->
-            <ImageView
-                android:id="@+id/memo_multi_view_photo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                />
-
-            <!--video-->
-            <VideoView
-                android:id="@+id/memo_multi_view_video"
-                android:layout_width="200dp"
-                android:layout_height="300dp"
-                android:visibility="gone"
-                />
-
-            <!--map-->
             <RelativeLayout
-                android:id="@+id/map_layout"
+                android:id="@+id/memo_multi_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
                 android:visibility="gone"
                 >
-                <fragment
-                    android:id="@+id/map"
-                    android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    class="com.google.android.gms.maps.MapFragment" />
-            </RelativeLayout>
 
-            <!--voice-->
-            <RelativeLayout
-                android:id="@+id/voice_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:visibility="gone"
-                >
-                <Button
-                    android:id="@+id/play_button"
+                <!--photo-->
+                <ImageView
+                    android:id="@+id/memo_multi_view_photo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="play"
+                    android:visibility="gone"
                     />
+
+                <!--video-->
+                <VideoView
+                    android:id="@+id/memo_multi_view_video"
+                    android:layout_width="200dp"
+                    android:layout_height="300dp"
+                    android:visibility="gone"
+                    />
+
+                <!--map-->
+                <RelativeLayout
+                    android:id="@+id/map_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    >
+                    <fragment
+                        android:id="@+id/map"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        class="com.google.android.gms.maps.MapFragment" />
+                </RelativeLayout>
+
+                <!--voice-->
+                <RelativeLayout
+                    android:id="@+id/voice_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    >
+                    <Button
+                        android:id="@+id/play_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="play"
+                        />
+                </RelativeLayout>
+
             </RelativeLayout>
 
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/memo_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:layout_below="@+id/memo_multi_view"
-            >
-
-            <EditText
-                android:id="@+id/memo_text_edit"
+            <RelativeLayout
+                android:id="@+id/memo_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="메모를 입력하세요"
-                android:textSize="16dp"
-                android:background="@null"
+                android:layout_marginTop="70dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_below="@+id/memo_multi_view"
+                >
+
+                <EditText
+                    android:id="@+id/memo_text_edit"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="메모를 입력하세요"
+                    android:textSize="16dp"
+                    android:background="@null"
+                    />
+
+            </RelativeLayout>
+
+
+        <LinearLayout
+            android:id="@+id/layout_multi_bar"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="30dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="30dp"
+            >
+
+            <ImageView
+                android:id="@+id/multi_photo_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_photo_button"
+                android:layout_marginRight="30dp"
                 />
 
-        </RelativeLayout>
+            <ImageView
+                android:id="@+id/multi_video_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_video_button"
+                android:layout_marginRight="30dp"
+                />
 
-    <LinearLayout
-        android:id="@+id/layout_multi_bar"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="30dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginRight="30dp"
-        >
+            <ImageView
+                android:id="@+id/multi_voice_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_voice_button"
+                android:layout_marginRight="30dp"
+                />
 
-        <!--<ImageView-->
-            <!--android:id="@+id/multi_trash_button"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:src="@drawable/icon_trash_can_button"-->
-            <!--android:layout_marginRight="30dp"-->
-            <!--/>-->
+            <ImageView
+                android:id="@+id/multi_map_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/icon_map_button"
+                />
 
-        <ImageView
-            android:id="@+id/multi_photo_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_photo_button"
-            android:layout_marginRight="30dp"
-            />
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/multi_video_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_video_button"
-            android:layout_marginRight="30dp"
-            />
-
-        <ImageView
-            android:id="@+id/multi_voice_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_voice_button"
-            android:layout_marginRight="30dp"
-            />
-
-        <ImageView
-            android:id="@+id/multi_map_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_map_button"
-            />
-
-    </LinearLayout>
 
 </RelativeLayout>
