--- a/app/src/main/res/layout/menu_list.xml
+++ b/app/src/main/res/layout/menu_list.xml
@@ -50,6 +50,24 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/drawer_search_memo"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:gravity="center_vertical"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:text="Search"
+                android:textSize="20dp"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
