--- a/app/src/main/res/layout/activity_create_memo.xml
+++ b/app/src/main/res/layout/activity_create_memo.xml
@@ -12,29 +12,43 @@
         layout="@layout/toolbar"
         />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:layout_below="@id/toolbar"
+        android:layout_above="@+id/layout_multi_bar"
+        >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            >
+
             <RelativeLayout
                 android:id="@+id/memo_multi_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
+                android:layout_alignParentTop="true"
                 android:visibility="gone"
                 >
 
                 <!--photo-->
                 <ImageView
                     android:id="@+id/memo_multi_view_photo"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
+                    android:adjustViewBounds="true"
                     />
 
                 <!--video-->
                 <VideoView
                     android:id="@+id/memo_multi_view_video"
-                    android:layout_width="200dp"
-                    android:layout_height="300dp"
+                    android:layout_width="300dp"
+                    android:layout_height="450dp"
                     android:visibility="gone"
                     />
 
@@ -48,7 +62,7 @@
                     <fragment
                         android:id="@+id/map"
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="300dp"
                         class="com.google.android.gms.maps.MapFragment" />
                 </RelativeLayout>
 
@@ -73,7 +87,6 @@
                 android:id="@+id/memo_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:layout_below="@+id/memo_multi_view"
@@ -89,7 +102,8 @@
                     />
 
             </RelativeLayout>
-
+        </RelativeLayout>
+    </ScrollView>
 
         <LinearLayout
             android:id="@+id/layout_multi_bar"
@@ -98,6 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="15dp"
             android:layout_marginRight="30dp"
             >
