--- a/app/src/main/res/layout/fragment_start_three.xml
+++ b/app/src/main/res/layout/fragment_start_three.xml
@@ -39,13 +39,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="new text"
+            android:text=""
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="new text"
+            android:text=""
             />
     </LinearLayout>
 
