--- a/app/src/main/res/layout/memo_list_view.xml
+++ b/app/src/main/res/layout/memo_list_view.xml
@@ -6,23 +6,32 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="55dp">
+        android:layout_height="55dp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginRight="14dp"
+        >
+
         <TextView
             android:id="@+id/memo_list_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:singleLine="true"
             android:textSize="16dp"
+            android:layout_toLeftOf="@+id/memo_list_date"
+            android:paddingRight="10dp"
             />
 
         <TextView
             android:id="@+id/memo_list_date"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="4dp"
             android:textSize="10dp"
             />
+
     </RelativeLayout>
 
 </RelativeLayout>
