--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -50,6 +50,27 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/layout_toolbar_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="40dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginStart="40dp"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textSize="18dp"
+                android:text="Login"
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/layout_toolbar_back_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
